# study_c

./: .gitignore  README.md
base/: C语言.md  README.md
base/hello_world/: main.c
base/practice1-3/: main.c
base/quadratic_equations_in_one_variable/: main.c
data_structure/: CMakeLists.txt  README.md  main.c
data_structure/doubly_linked_list/: doubly_linked_list.c  doubly_linked_list.h  doubly_linked_list_test.c
